--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 #hole{
     width: 50px;
     height: 150px;
-    background-color: rgba(88, 158, 78, 0.808);
+    background-color: rgba(75, 172, 118, 0.808);
     position: relative;
     left: 400px;
     top: -500px;
@@ -37,6 +37,20 @@
     position: absolute;
     top: 100px;
     border-radius: 50%;
+}
+.score{
+    height: 60px;
+    width: 90px;
+    border: 4px solid red;
+    display: flex;
+ }
+.HighScore{
+    height: 60px;
+    width: 90px;
+    border: 4px solid red;
+    display: flex;
+    position: relative;
+    top: 500px;
 }
 .up{
 transform: rotate(-30deg);
