--- a/style.css
+++ b/style.css
@@ -8,15 +8,15 @@
     border: 1px solid black;
     margin: auto;
     overflow: hidden;
-    /* background: linear-gradient(-60deg, rgba(118, 230, 118, 0.61), rgba(95, 95, 247, 0.616), rgba(247, 111, 247, 0.616)); */
-    background-image: url(img/background.webp);
+    background-image: url(img/background.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 #block{
     width: 50px;
     height: 500px;
-    background-color: black;
+    background-color: rgb(32, 133, 94);
     position: relative;
     left: 400px;
     
@@ -31,7 +31,8 @@
 #hole{
     width: 50px;
     height: 150px;
-    background-color: rgba(75, 172, 118, 0.808);
+    background-color: #5bb2cd;
+  
     position: relative;
     left: 400px;
     top: -500px;
@@ -62,4 +63,17 @@ transform: rotate(-30deg);
 }
 .down{
     transform: rotate(30deg);
+}
+.main{
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* #game{
+    position: absolute;
+   
+} */
+#gameover{
+position: absolute;
 }
