--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@
     top: -500px;
 }
 #character{
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     position: absolute;
     top: 100px;
     border-radius: 50%;
@@ -75,5 +75,5 @@ transform: rotate(-30deg);
    
 } */
 #gameover{
-position: absolute;
+/* position: absolute; */
 }
